--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "activedirectory": "^0.7.2",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.6.0",
     "connect-flash": "^0.1.1",
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-bouncer": "^0.2.0",
     "express-session": "^1.17.1",
     "morgan": "^1.10.0",
     "msnodesqlv8": "^2.0.15",
